FIX: IE bug in documents display - spacing for document details fixed
git-svn-id: http://concourseconnect.googlecode.com/svn/concourseconnect/trunk@33 0a69d750-447c-11de-a5f8-e1a32e2bd165

--- a/src/main/webapp/css/ccp-portlets.css
+++ b/src/main/webapp/css/ccp-portlets.css
@@ -2015,6 +2015,10 @@ ol.pagination {
     padding: 0;
     top: 0
   }
+  
+  .file-list li .portlet-section-body p {
+    *margin:10px 0 0;
+}
 
 .file-list .portlet-section-body h2 span {
   font-weight:300;
